# Stone

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
config/: position_rules.example.yaml  position_rules.starter_1000.yaml  positions.example.yaml  universe_rules.starter.yaml  universe_rules.yaml
config/strategies/: band_trend_v1.yaml  breakout_strong.yaml  breakout_strong_fundamental.yaml  starter_small_capital_v1.yaml  value_with_catalyst.yaml
launchd/: com.stone.daily.plist  com.stone.intraday.plist  com.stone.pre-market.plist  com.stone.review.plist
output/: 2026-06-14_starter_pool_test.md  2026-06-14_starter_small_capital_v1.html  2026-06-14_starter_small_capital_v1.json  2026-06-14_starter_small_capital_v1.md  2026-06-14_starter_small_capital_v1.xlsx
scripts/: daily_analysis.py  install_launchd.sh  uninstall_launchd.sh
stone/: __init__.py  cli.py  constants.py  errors.py  logging_setup.py
stone/data/: incremental.py  quality.py  universe.py
stone/reporters/: __init__.py  charts.py  excel.py  html.py  json_reporter.py  markdown.py  models.py
stone/selector/: __init__.py  constraints.py  criterion.py  engine.py  position_sizing.py  scoring.py  strategy.py
templates/: report.html.j2
tests/: conftest.py
tests/e2e/: test_cli.py
tests/helpers/: kline_generator.py  seed_data.py
tests/integration/: test_pipeline.py
tests/unit/: test_cli.py  test_constraints.py  test_criterion.py  test_daily_analysis.py  test_engine.py  test_logging_setup.py  test_position_sizing.py  test_reporters_excel.py  test_reporters_html.py  test_scoring.py  (+3 more)
(+30 files in other folders)
