[project]
name = "stone"
version = "0.1.0"
description = "A-stock personal investment research assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.12.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.6.0",
    "pandas-ta>=0.3.14b",
    "click>=8.1.0",
    "tenacity>=8.2.0",
    "tqdm>=4.66.0",
    "mplfinance>=0.12.10b0",
    "plotly>=5.20.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.2.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "ipykernel>=7.0.0",
    "jupyter>=1.0.0",
]

[project.scripts]
stone = "stone.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stone"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=stone --cov-report=term-missing --cov-report=html --cov-fail-under=80 --strict-markers"
markers = [
    "integration: marks integration tests",
    "e2e: marks end-to-end tests",
]

[tool.coverage.run]
source = ["stone"]
omit = ["tests/*", "**/__init__.py", "main.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
